# lite-shell

./: .agent.patch  .agent.patch.gz.b64  .gitignore  README.md  frontend-validation-tail.txt  handoff.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
.agent-patch/: error.txt  part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs  profiles.rs  ssh.rs
scripts/: apply_pr10_checkpoint_truth.py  apply_pr10_clippy_fix.py  apply_pr10_docs_styles.py  apply_pr10_frontend_queue.py  apply_pr10_queue_api.py  apply_pr10_queue_bridge.py  apply_pr10_queue_race_fixes.py  apply_pr11_docs.py  apply_pr11_navigation.py  apply_pr11_review_fixes.py  apply_pr12_review_fixes.py  apply_pr6.py  apply_pr7.py  apply_pr7_followup.py  apply_pr7_safety_fix.py  apply_pr8_review_fixes.py  apply_pr9_remote_path_validation.py  apply_pr9_review_fixes.py  apply_pr9_safe_local_cleanup.py  apply_pr9_upload_review_fixes.py  apply_sftp_directory_tree.py  ensure-icons.mjs  finalize_pr12_docs.py  finalize_pr9_docs.py  fix_apply_pr6.py  fix_apply_pr7.py  fix_apply_pr9_review_script.py  fix_pr10_checkpoint_patch.py  fix_pr7_script_escape.py  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: atomic_file.rs  lib.rs  main.rs  monitor.rs  sftp.rs  sftp_batch.rs  sftp_directory.rs  sftp_queue.rs  sftp_recursive.rs  ssh.rs
(+63 files in other folders)
