[package]
name = "lite-shell"
version = "0.1.0"
description = "LiteShell lightweight SSH/SFTP desktop client"
authors = ["kelei321"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4", "serde"] }
