[package]
name = "liteshell"
version = "0.1.0"
description = "A lightweight SSH client"
authors = ["LiteShell"]
edition = "2021"

[lib]
name = "liteshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
russh = { version = "0.62.2", default-features = false, features = ["ring"] }
russh-sftp = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Storage_FileSystem"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
